flyway url issue

--- a/core-services/egov-persister/src/main/resources/application.properties
+++ b/core-services/egov-persister/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/hpudd
+spring.datasource.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Test@908
 
 #Set context root
 server.port = 8083
@@ -10,9 +10,9 @@ server.servlet.context-path=/common-persist
 
 
 #----------------------------- FLYWAY CONFIGURATIONS ------------------------------#
-spring.flyway.url=jdbc:postgresql://localhost:5432/hpudd
+spring.flyway.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 spring.flyway.user=postgres
-spring.flyway.password=postgres
+spring.flyway.password=Test@908
 spring.flyway.table=public
 spring.flyway.baseline-on-migrate=true
 spring.flyway.outOfOrder=true
