--- a/business-services/collection-services/src/main/resources/application.properties
+++ b/business-services/collection-services/src/main/resources/application.properties
@@ -15,12 +15,12 @@ collection.is.user.create.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Test@908
 spring.jackson.serialization.write-dates-as-timestamps=false
 
 #flyway config
 spring.flyway.user=postgres
-spring.flyway.password=postgres
+spring.flyway.password=Test@908
 spring.flyway.outOfOrder=true
 spring.flyway.table=collection_services_schema_version
 spring.flyway.baseline-on-migrate=true
