--- a/core-services/egov-common-masters/src/main/resources/application.properties
+++ b/core-services/egov-common-masters/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 #---------------------------- DATABASE CONFIGURATIONS -----------------------------#
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/egov-common-masters_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Test@908
 
 
 #----------------------------- FLYWAY CONFIGURATIONS ------------------------------#
 
-flyway.url=jdbc:postgresql://localhost:5432/egov-common-masters_db
+flyway.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 flyway.user=postgres
-flyway.password=postgres
+flyway.password=Test@908
 flyway.table=egov_common_masters_schema_version
 flyway.baseline-on-migrate=false
 flyway.outOfOrder=true
