--- a/core-services/egov-filestore/src/main/resources/application.properties
+++ b/core-services/egov-filestore/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=8083
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/devdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Test@908
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.EJB3NamingStrategy
@@ -19,11 +19,11 @@ spring.data.jpa.repositories.enabled=true
 
 spring.flyway.enabled=true
 spring.flyway.user=postgres
-spring.flyway.password=postgres
+spring.flyway.password=Test@908
 spring.flyway.outOfOrder=true
 spring.flyway.table=egov_filestore_schema_version
 spring.flyway.baseline-on-migrate=true
-spring.flyway.url=jdbc:postgresql://localhost:5432/devdb
+spring.flyway.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 spring.flyway.locations=classpath:/db/migration/ddl
 
 
