--- a/core-services/egov-user/src/main/resources/application.properties
+++ b/core-services/egov-user/src/main/resources/application.properties
@@ -6,16 +6,16 @@ security.sessions:NEVER
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/hpudd
+spring.datasource.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=Test@908
 flyway.enabled=true
 flyway.user=postgres
-flyway.password=postgres
+flyway.password=Test@908
 flyway.outOfOrder=true
 flyway.table=egov_user_schema_version
 flyway.baseline-on-migrate=true
-flyway.url=jdbc:postgresql://localhost:5432/hpudd
+flyway.url=jdbc:postgresql://localhost:5432/hp_udd_dev
 flyway.locations=db/migration/ddl,db/migration/seed,db/migration/dev
 flyway.out-of-order=true
 flyway.ignore-missing-migrations = true
