--- a/frontend/micro-ui/package.json
+++ b/frontend/micro-ui/package.json
@@ -1,4 +1,14 @@
 {
   "name": "digit-ui",
-  "version": "1.7.0-beta.2"
+  "version": "1.7.0-beta.2",
+  "dependencies": {
+    "@upyog/digit-ui-libraries": "^1.7.1",
+    "@upyog/digit-ui-module-common": "^1.7.1",
+    "@upyog/digit-ui-module-commonpt": "^1.7.2",
+    "@upyog/digit-ui-module-core": "^1.7.1",
+    "@upyog/digit-ui-module-dss": "^1.7.1",
+    "@upyog/digit-ui-module-obps": "^1.7.2",
+    "@upyog/digit-ui-module-pt": "^1.7.2",
+    "@upyog/digit-ui-react-components": "^1.7.1"
+  }
 }
